# grep_bin

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  utils.rs
src/utils/: file.rs  search.rs
