[package]
name = "grep_bin"
version = "1.1.0"
edition = "2021"
authors = ["LaBatata101 <labatata101@linuxmail.org>"]
description = "Searches recursively a directory or multiple files for a sequence of bytes or ASCII string."
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/LaBatata101/grep_bin"
repository = "https://github.com/LaBatata101/grep_bin"
keywords = ["binary", "grep", "search", "pattern", "bgrep"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33.3"
hex = "0.4.3"
ansi_term = "0.12.1"
