[package]
name = "grep_bin"
version = "2.0.0"
edition = "2021"
authors = ["LaBatata101 <labatata101@linuxmail.org>"]
description = "Searches recursively a directory or multiple files for a sequence of bytes or ASCII string."
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/LaBatata101/grep_bin"
repository = "https://github.com/LaBatata101/grep_bin"
keywords = ["binary", "grep", "search", "pattern", "bgrep"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.3", features = ["cargo"] }
hex = "0.4.3"
ansi_term = "0.12.1"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = true
